Aula: Refatorando filtro de company