@@ -3,7 +3,7 @@ package br.com.joaopmazzo.gestao_vagas.modules.candidate.usecases;
 import br.com.joaopmazzo.gestao_vagas.modules.candidate.CandidateEntity;
 import br.com.joaopmazzo.gestao_vagas.modules.candidate.CandidateRepository;
 import br.com.joaopmazzo.gestao_vagas.modules.candidate.dto.AuthCandidateRequestDTO;
-import br.com.joaopmazzo.gestao_vagas.modules.candidate.dto.AuthCandidateResponseDTO;
+import br.com.joaopmazzo.gestao_vagas.security.AuthResponseDTO;
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
 import lombok.RequiredArgsConstructor;
@@ -15,7 +15,7 @@ import org.springframework.stereotype.Service;
 import javax.naming.AuthenticationException;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -27,12 +27,10 @@ public class AuthCandidateUseCase {
     private final CandidateRepository candidateRepository;
     private final PasswordEncoder passwordEncoder;
 
-    public AuthCandidateResponseDTO execute(AuthCandidateRequestDTO authCandidateRequestDTO) throws AuthenticationException {
+    public AuthResponseDTO execute(AuthCandidateRequestDTO authCandidateRequestDTO) throws AuthenticationException {
         CandidateEntity candidate = candidateRepository
                 .findByUsername(authCandidateRequestDTO.username())
-                .orElseThrow(() -> {
-                    throw new UsernameNotFoundException("Username/password incorrect");
-                });
+                .orElseThrow(() -> new UsernameNotFoundException("Username/password incorrect"));
 
         boolean isPasswordMatches = passwordEncoder.matches(authCandidateRequestDTO.password(), candidate.getPassword());
         if (!isPasswordMatches) throw new AuthenticationException();
@@ -42,11 +40,11 @@ public class AuthCandidateUseCase {
         Algorithm algorithm = Algorithm.HMAC256(secretKey);
         String token = JWT.create().withIssuer("javagas")
                 .withExpiresAt(expiresIn)
-                .withClaim("roles", Arrays.asList("CANDIDATE"))
+                .withClaim("roles", List.of("CANDIDATE"))
                 .withSubject(candidate.getId().toString())
                 .sign(algorithm);
 
-        return AuthCandidateResponseDTO.builder()
+        return AuthResponseDTO.builder()
                 .access_token(token)
                 .expires_in(expiresIn.toEpochMilli())
                 .build();
